mobile-web: Fix for message controls overlapping text below 501px
When a user sends consecutive messages, the message controls bar
overlaps with the message text.

This has been fixed by giving the message control bar a min height
and ensuring it appears above the message text

Fixes: #16488

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1178,13 +1178,18 @@ td.pointer {
 }
 
 .message_sender {
-    height: 0;
     vertical-align: top;
     position: relative;
 
     i.zulip-icon.bot {
         font-size: 12px;
     }
+
+    @media (max-width: 500px) {
+        min-height: 20px;
+        display: inline-block;
+    }
+
 }
 
 .sender_name {
